# letrs

./: Cargo.toml  LICENSE  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: check.yml
letrs/: Cargo.toml  README.md
letrs-cli/: Cargo.toml  README.md
letrs-cli/src/: main.rs
letrs-fonts/: Cargo.toml  LICENSE  README.md
letrs-fonts/src/: lib.rs
letrs/src/: font.rs  lib.rs  render.rs  str_ext.rs
letrs/src/font/: header.rs
letrs/src/render/: layout.rs
src/: font.rs  layout.rs  lib.rs  main.rs  render.rs  str_ext.rs
src/render/: layout.rs
