[package]
name = "letrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "letrs"
path = "src/lib.rs"

[[bin]]
name = "letrs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.40", features = ["derive"], optional = true }
enumset = "1.1.6"
itertools = "0.14.0"
thiserror = "2.0.12"

[dev-dependencies]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow"]
