[package]
name = "letrs-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Command-line application to render text with FIGlet fonts"
readme = "README.md"
repository = "https://github.com/ronnodas/letrs"
keywords = ["figlet", "ascii", "asciiart", "cli"]
categories = ["command-line-utilities"]


[[bin]]
name = "letrs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.0"
clap = { version = "4.0.0", features = ["derive"] }
letrs = { version = "0.1.0", path = "../letrs" }
print_bytes = "2.0.0"


[lints]
workspace = true
