[package]
name = "letrs-fonts"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "A collection of FIGlet fonts"
repository = "https://github.com/ronnodas/letrs"
keywords = ["figlet", "ascii", "asciiart", "font"]
categories = ["command-line-utilities", "visualization"]


[dependencies]

[lints]
workspace = true
