[package]
name = "letrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
enumset = "1.1.6"
itertools = "0.14.0"
thiserror = "2.0.12"
letrs-fonts = { version = "0.1.0", path = "../letrs-fonts", optional = true }
bstr = "1.12.0"

[lints]
workspace = true

[features]
default = ["fonts"]
fonts = ["dep:letrs-fonts"]
