[package]
name = "letrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Parse and render text with FIGlet fonts"
readme = "README.md"
repository = "https://github.com/ronnodas/letrs"
keywords = ["figlet", "ascii", "asciiart"]
categories = ["command-line-utilities", "visualization"]


[dependencies]
bstr = "1.0.0"
enumset = "1.1.0"
itertools = "0.14.0"
thiserror = "2.0.0"
letrs-fonts = { version = "0.1.0", path = "../letrs-fonts", optional = true }

[lints]
workspace = true

[features]
default = ["fonts"]
fonts = ["dep:letrs-fonts"]
